@@ -22,7 +22,8 @@
 		search: '{trans("Search")}',
 		columnVisibility: '{trans("Column visibility")}',
 		clearSettings: '{trans("Clear settings")}',
-		visualEditor: '{trans("visual editor")}'
+		visualEditor: '{trans("visual editor")}',
+		selectionAny: '{trans("- any -")}'
 	}
 //-->
 </script>
