@@ -117,6 +117,7 @@ version ?.??.?? (????-??-??):
     (default: 3; 0 means unlimited) configuration variable controls this [chilan]
   - main menu items are sortable by draging menu icon and dropping it in another place [chilan]
   - removed support for swekey [prezes_kk]
+  - datatables column search supports selection lists [chilan]
 
 version 1.11.20 (2016-04-19):
 
